[workspace]
members = ["sin_macros", "sin_types"]

[package]
name = "sin"
version = "0.0.2"
edition = "2021"
authors = ["sam0x17"]
description = "Sin aims to be an alternative to the proc-macro2/syn ecosystem geared towards developer UX and custom syntax parsing."
keywords = ["syn", "quote", "proc-macro", "parsing"]
repository = "https://github.com/sam0x17/sin"
homepage = "https://sam0x17.dev"
license = "MIT"

[dependencies]
sin_macros = { path = "sin_macros", version = "0.0.2" }
sin_types = { path = "sin_types", version = "0.0.2" }
proc-macro2 = "1"

[dev-dependencies]
quote = "1"
syn = "2"
